# NormyFormy

./: README.md  pyproject.toml
normyformy/: exceptions.py  generate_file_report.py  main.py  python_module_compressor.py  run_test_code.py
normyformy/core/: autodiscover.py  file_filter.py  file_reader.py  file_tree.py  report.py
