[project]
name = "llm-code-reviewer-policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "genson>=1.3.0",
    "grimp>=3.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "openai>=1.100.2",
    "pathspec>=0.12.1",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.5",
    "networkx>=3.5",
]
